# ChangeLog for media-sound/samplv1
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*samplv1-0.4.0 (08 Mar 2014)

  08 Mar 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
  +samplv1-0.4.0.ebuild:
  Version bump.

*samplv1-0.3.6 (01 Jan 2014)

  01 Jan 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +samplv1-0.3.6.ebuild:
  Version bump.

*samplv1-0.3.5 (30 Sep 2013)

  30 Sep 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +samplv1-0.3.5.ebuild:
  Version bump.

*samplv1-0.3.4 (16 Jul 2013)

  16 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -samplv1-0.3.2.ebuild, -samplv1-0.3.2-r1.ebuild, +samplv1-0.3.4.ebuild,
  samplv1-9999.ebuild:
  Version bump.
  Removed qt4 fix.
  Removed old ebuilds.

  07 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-9999.ebuild:
  Make sure configure finds qt.
  Update mime database.

*samplv1-0.3.3 (31 May 2013)

  31 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +samplv1-0.3.3.ebuild:
  Version bump.

  05 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-0.3.2-r1.ebuild, samplv1-9999.ebuild:
  Restrict mirror.

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-9999.ebuild:
  Require jack or lv2 to be enabled.
  Only require midi (alsa or jackmidi) support if jack is built.

*samplv1-0.3.2-r1 (04 May 2013)

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-0.3.2.ebuild, +samplv1-0.3.2-r1.ebuild, samplv1-9999.ebuild,
  metadata.xml:
  Only raw text in HOMEPAGE.
  Declare AUTOTOOLS_AUTORECONF before inherit.
  Add more USE flags.
  Remove redundant DOCS variable.
  Use qt4-r2 eclass to respect common variables.

  08 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-0.3.2.ebuild, samplv1-9999.ebuild:
  modify depends x11-libs/qt-* -> dev-qt/qt*

*samplv1-0.3.2 (01 Mar 2013)

  01 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>