@@ -1,13 +1,9 @@
-DIST samplv1-0.3.3.tar.gz 130957 SHA256 00b199ed24e160763fb10a36942b8e79cbeabe861efe54b33a08bb21e5217f21 SHA512 83ae4c0b6f82a38143efb231871232147cd28c47ffbffbc57549efc6043676f9b4d43e90c71a8211c2222dd38bf2e6bb4523d15fd4c6c385feec52d68acffc50 WHIRLPOOL 13142280916f4148b29b7cec0083c4338464c97ed0f3c178a43531713f482eeeb85716f6ef6356c07b5989b769b3d5efb41a093e4104692b27310196a94c1710
-DIST samplv1-0.3.4.tar.gz 193642 SHA256 cb36a0990c52308aeda3e339440c0a9f9d5dd0f1734aec9f00ed21e9f7132977 SHA512 b0374899f8e208e037edad8f333e07f7e9028d958caf0db628d74e413ea11a14d979154d5fb52fd901bfa344483f91117a697af22015bdd89657f1b8206676a9 WHIRLPOOL 30551c21a79313127cb19c3a5213f83599cf855ba0f23d4f5f5e873a696a5da25aeeffb4c348965341ff0b64af0060d4b3e2e638e0f587516da3117444c85eb6
-DIST samplv1-0.3.5.tar.gz 195145 SHA256 89c378ae48fffbccca2cffa5e50a3778ca1b5f7e232f0fa0cc8ea6bf167b8fe0 SHA512 f283258cd1b5a8656df8efbe4cdde88da1a573dc4e9c01918c4cc5f6981d8601d040ce77d5aeff6c65367cd6bddb1682e556d3842694033f3af0bb964541c1a1 WHIRLPOOL c366c86fb9f7c198d66d1c18d5b8dfe9e897fd812a64a58ee3e72da3a3f9a291fcfba83e1922a2238213dd16f60c27345b6b87a22d47b5346e1b5c09cf1438ae
 DIST samplv1-0.3.6.tar.gz 197373 SHA256 3e2bc3609433e6ebfed3a49573d799c888f9ffadefa8407688e8825b074ffeb9 SHA512 d215467e3f16300208275afabbbe3c6d9477958b7791208a2b3ef6385e822a3cd2a163331c3c810584a9573e50560d5304416af656fba5453243e1ed6fd03f26 WHIRLPOOL cecb43cdaf2ce9430fd5a52cb51e1c2446ee74f805ceb7179f9ff3ef2b6297f36ec16089015facf74930ce6dc52e095feae4d595c1a1dfe7d4a86af58ca37f51
 DIST samplv1-0.4.0.tar.gz 201724 SHA256 28e6b162d256cd48d3398d66fd85fe5662d50ed8be44d2f867a900522f6f7413 SHA512 4c24e30e3d39de8f90a311a30ee2d655a13c35375e28be5d33a41c2c1128f19d585492c96645df0987cbf783b2b477f5793b9a407975332c21d6f478e1fc7842 WHIRLPOOL 7edeec7ec644f4071b7ad2c2046b41062faf7b5ec864f1b95cac7f4fca776979bd6a8c8ec829f34fec9bb8b0c3f4c839b6a14105314072c48de18a95955b906d
-EBUILD samplv1-0.3.3.ebuild 1638 SHA256 258731b77a0e245bd705285d5df48a9605e629d3437afafa6b318a5673635130 SHA512 5c3116ea45ec7262a07b0170ab2eb1efc446afe0001b2d89e6176f7cd9a06ffde6e2e5bade1e311b9a3fb9767afb3414a97aa429a567a42a21428c5a1e07d99b WHIRLPOOL e7d9a383439f9b3ee2dbbc272c40f1c43f65c02dfa809c77315bd06e6509e5ee66a638aa506ff7470837a7d0e396df157b458dc4aebb26d0a2f9f983381c8b3c
-EBUILD samplv1-0.3.4.ebuild 1748 SHA256 ee180807ee8059d96d482edf3e8da7f4e111f88b9e047d4dcd8a315fcf432dc8 SHA512 3b0d307dc2386fdf75948e2ad9a52efd9639ec9517af66d9709c1af0b5ecb8a9bf2bb6bad2b16d4234872ebd96d41bc1358e203929a36b64b6e22e46ad41e8fd WHIRLPOOL 3b4517467ea34bea5780b0a208709f387140cf1e78b19344ccd885392392a76f0df7f7c12dbad7556f3f993191347dcf30a690dfe29226d888e7de570e074f68
-EBUILD samplv1-0.3.5.ebuild 1748 SHA256 ee180807ee8059d96d482edf3e8da7f4e111f88b9e047d4dcd8a315fcf432dc8 SHA512 3b0d307dc2386fdf75948e2ad9a52efd9639ec9517af66d9709c1af0b5ecb8a9bf2bb6bad2b16d4234872ebd96d41bc1358e203929a36b64b6e22e46ad41e8fd WHIRLPOOL 3b4517467ea34bea5780b0a208709f387140cf1e78b19344ccd885392392a76f0df7f7c12dbad7556f3f993191347dcf30a690dfe29226d888e7de570e074f68
+DIST samplv1-0.4.1.tar.gz 203444 SHA256 dde4ecacbb2c445143a6515f8fefc3d242bd46c1183e8d45f595b7bc93c6a3b3 SHA512 f0345b610e25df6303590c378bfcf29051fb463f66226b7dc4ea727582f5f3e09e2bc1ff4158fd84f836c1357a2db400272a11b388231629ad3d4b44207f69ea WHIRLPOOL 6944c78952a98ceccb8b1f56d04a1708616a3eab11d2b66c904e7218df3e18163201c34703cdd421c9ea2833d641aafa8a12b5c57ff838e40003ea412c137d97
 EBUILD samplv1-0.3.6.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
 EBUILD samplv1-0.4.0.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
+EBUILD samplv1-0.4.1.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
 EBUILD samplv1-9999.ebuild 1748 SHA256 ee180807ee8059d96d482edf3e8da7f4e111f88b9e047d4dcd8a315fcf432dc8 SHA512 3b0d307dc2386fdf75948e2ad9a52efd9639ec9517af66d9709c1af0b5ecb8a9bf2bb6bad2b16d4234872ebd96d41bc1358e203929a36b64b6e22e46ad41e8fd WHIRLPOOL 3b4517467ea34bea5780b0a208709f387140cf1e78b19344ccd885392392a76f0df7f7c12dbad7556f3f993191347dcf30a690dfe29226d888e7de570e074f68
-MISC ChangeLog 2265 SHA256 5bf1f304a08cbba0178e2850e5f744661627e506f5573aeb3cca0fcc5264399c SHA512 ae152938dbf8e8c7085e0585f136f3704e236c43ab157cda8fd20a716d691cafb329d87c697bb18a44feeece5485697397d2f1d12ee67b87220b7e08598a01db WHIRLPOOL 317a7af638c687b954c39c2f90840b4ce99f9cca46e97b0fb185a85c79b3b0494b2628b1258a37e749b62c10f5d6cd5f08077271715799ee555282a10ebf2900
+MISC ChangeLog 2500 SHA256 02911b7e4002643fba84a7a8e126a8edad76b5721d1dfcea5e0fc54201dc0218 SHA512 81f52be3f366576139d1721bc96aab6d9d52cdb75284c8815095af9313c9de70ff215cf857e55d72075e8c694ad74b0b81272aeddce9065511b339051f16f677 WHIRLPOOL 6c9681a73cbbdc6afb5e79b47bb4658f8e3a060b98ab3a6025243d0b998c5d2a01db0fc8d593c3bccc4c710cd2f700bf8518b47b5a01dd28481e4a95cb735df8
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
